--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ compiler:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ninja intltool; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link --force gettext ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew uses gettext ; fi
   - sudo pip3 install --upgrade pip
   - sudo pip3 install setuptools
   - sudo pip3 install 'meson==0.47'
